Modified Z-index of body and carrousel to fix navbar exposure

--- a/styles.css
+++ b/styles.css
@@ -367,6 +367,7 @@
     overflow-x: hidden;
     background: rgb(2,0,36);
     background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(1,21,167,0.8) 55%, rgba(65,114,249,1) 100%);
+    z-index: -100;
   }
 
   @keyframes slide {
@@ -391,6 +392,7 @@
     padding:1em;
     border-radius: 25px;
     margin-top: 70px;
+    z-index: -80;
   } 
 
   .carrousel .carrousel__container {
@@ -403,6 +405,7 @@
     padding: 2em;
     border-radius: 25px;
     animation: slide 15s ease infinite;
+    z-index: -70;
     
   }
 
@@ -414,6 +417,7 @@
     background: linear-gradient(145deg, #cacaca, #f0f0f0);
     box-shadow:  15px 15px 30px #bebebe,
              -15px -15px 30px #ffffff;
+    z-index: -50;
   }
 
   .carrousel .puntos {
@@ -423,6 +427,7 @@
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
+    z-index: -50;
   }
 
   .carrousel .punto {
